Fix menu visibility on low height mobiles

--- a/src/styles/layout/_layout.scss
+++ b/src/styles/layout/_layout.scss
@@ -25,12 +25,6 @@
     flex: 30%;
   }
 
-  &__info {
-    @include querymin($site-screen-xs) {
-      white-space: nowrap;
-    };
-  }
-
   &__label,
   &__field {
     margin: 5px 0;
